--- a/modules/select/views/select-choices.html
+++ b/modules/select/views/select-choices.html
@@ -1,4 +1,4 @@
-<lx-dropdown-menu class="lx-select-choices"
+<lx-dropdown-menu class="lx-select-choices {{lxSelectChoices.parentCtrl.choicesClass}}"
                   ng-class="{ 'lx-select-choices--custom-style': lxSelectChoices.parentCtrl.choicesCustomStyle,
                               'lx-select-choices--default-style': !lxSelectChoices.parentCtrl.choicesCustomStyle,
                               'lx-select-choices--is-multiple': lxSelectChoices.parentCtrl.multiple,
@@ -23,16 +23,21 @@
 
         <div ng-if="::!lxSelectChoices.isArray()">
             <li class="lx-select-choices__subheader"
+                ng-show="(children | filterChoices:lxSelectChoices.parentCtrl.filter:lxSelectChoices.filterModel).length > 0"
                 ng-repeat-start="(subheader, children) in lxSelectChoices.parentCtrl.choices"
                 ng-bind-html="::lxSelectChoices.parentCtrl.displaySubheader(subheader)"></li>
 
             <li class="lx-select-choices__choice"
                 ng-class="{ 'lx-select-choices__choice--is-selected': lxSelectChoices.parentCtrl.isSelected(choice),
-                            'lx-select-choices__choice--is-focus': lxSelectChoices.parentCtrl.activeChoiceIndex === $index }"
+                            'lx-select-choices__choice--is-focus': lxSelectChoices.parentCtrl.activeChoiceIndex === $index,
+                            'hidden': choice.hidden || choice.alwaysHidden }"
                 ng-repeat-end
                 ng-repeat="choice in children | filterChoices:lxSelectChoices.parentCtrl.filter:lxSelectChoices.parentCtrl.filterModel"
                 ng-bind-html="::lxSelectChoices.parentCtrl.displayChoice(choice)"
-                ng-click="lxSelectChoices.parentCtrl.toggleChoice(choice, $event)"></li>
+                ng-click="lxSelectChoices.parentCtrl.toggleChoice(choice, $event)"
+                ng-disabled="::choice.disabled || choice.alwaysDisabled"
+                tabindex="0"
+            ></li>
         </div>
 
         <li class="lx-select-choices__subheader" ng-if="lxSelectChoices.parentCtrl.helperDisplayable()">
