--- a/modules/select/views/select-choices.html
+++ b/modules/select/views/select-choices.html
@@ -28,9 +28,10 @@
                 ng-bind-html="::lxSelectChoices.parentCtrl.displaySubheader(subheader)"></li>
 
             <li class="lx-select-choices__choice"
+                ng-hide="choice.hidden || choice.alwaysHidden"
                 ng-class="{ 'lx-select-choices__choice--is-selected': lxSelectChoices.parentCtrl.isSelected(choice),
                             'lx-select-choices__choice--is-focus': lxSelectChoices.parentCtrl.activeChoiceIndex === $index,
-                            'hidden': choice.hidden || choice.alwaysHidden }"
+                            }"
                 ng-repeat-end
                 ng-repeat="choice in children | filterChoices:lxSelectChoices.parentCtrl.filter:lxSelectChoices.parentCtrl.filterModel"
                 ng-bind-html="::lxSelectChoices.parentCtrl.displayChoice(choice)"
