--- a/modules/select/views/select-choices.html
+++ b/modules/select/views/select-choices.html
@@ -18,6 +18,7 @@
                             'lx-select-choices__choice--is-focus': lxSelectChoices.parentCtrl.activeChoiceIndex === $index }"
                 ng-repeat="choice in lxSelectChoices.parentCtrl.choices | filterChoices:lxSelectChoices.parentCtrl.filter:lxSelectChoices.parentCtrl.filterModel"
                 ng-bind-html="::lxSelectChoices.parentCtrl.displayChoice(choice)"
+                ng-hide="choice.hidden || choice.alwaysHidden"
                 ng-click="lxSelectChoices.parentCtrl.toggleChoice(choice, $event)"></li>
         </div>
 
@@ -25,6 +26,7 @@
             <li class="lx-select-choices__subheader"
                 ng-show="(children | filterChoices:lxSelectChoices.parentCtrl.filter:lxSelectChoices.filterModel).length > 0"
                 ng-repeat-start="(subheader, children) in lxSelectChoices.parentCtrl.choices"
+                ng-hide="choice.hidden || choice.alwaysHidden"
                 ng-bind-html="::lxSelectChoices.parentCtrl.displaySubheader(subheader)"></li>
 
             <li class="lx-select-choices__choice"
