--- a/modules/select/views/select-choices.html
+++ b/modules/select/views/select-choices.html
@@ -15,11 +15,15 @@
         <div ng-if="::lxSelectChoices.isArray()">
             <li class="lx-select-choices__choice"
                 ng-class="{ 'lx-select-choices__choice--is-selected': lxSelectChoices.parentCtrl.isSelected(choice),
-                            'lx-select-choices__choice--is-focus': lxSelectChoices.parentCtrl.activeChoiceIndex === $index }"
+                            'lx-select-choices__choice--is-focus': lxSelectChoices.parentCtrl.activeChoiceIndex === $index,
+                             'hidden' : choice.hidden || choice.alwaysHidden }"
                 ng-repeat="choice in lxSelectChoices.parentCtrl.choices | filterChoices:lxSelectChoices.parentCtrl.filter:lxSelectChoices.parentCtrl.filterModel"
                 ng-bind-html="::lxSelectChoices.parentCtrl.displayChoice(choice)"
                 ng-hide="choice.hidden || choice.alwaysHidden"
-                ng-click="lxSelectChoices.parentCtrl.toggleChoice(choice, $event)"></li>
+                ng-click="lxSelectChoices.parentCtrl.toggleChoice(choice, $event)"
+                ng-keydown="lxSelectChoices.onChoiceKeyDown(choice, $event)"
+                tabindex="0"
+            ></li>
         </div>
 
         <div ng-if="::!lxSelectChoices.isArray()">
@@ -32,12 +36,14 @@
                 ng-hide="choice.hidden || choice.alwaysHidden"
                 ng-class="{ 'lx-select-choices__choice--is-selected': lxSelectChoices.parentCtrl.isSelected(choice),
                             'lx-select-choices__choice--is-focus': lxSelectChoices.parentCtrl.activeChoiceIndex === $index,
+                            'hidden' : choice.hidden || choice.alwaysHidden
                             }"
                 ng-repeat-end
                 ng-repeat="choice in children | filterChoices:lxSelectChoices.parentCtrl.filter:lxSelectChoices.parentCtrl.filterModel"
                 ng-bind-html="::lxSelectChoices.parentCtrl.displayChoice(choice)"
                 ng-click="lxSelectChoices.parentCtrl.toggleChoice(choice, $event)"
                 ng-disabled="::choice.disabled || choice.alwaysDisabled"
+                ng-keydown="lxSelectChoices.onChoiceKeyDown(choice, $event)"
                 tabindex="0"
             ></li>
         </div>
